Fix blocking SmallColorSelector on OpenGL 2.1, possibly other errors

BUG: 447868


(cherry picked from commit 45c0093581ccc7c5cef9a15103cb8e65b96e67de)